--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wangfeng.test">
+          package="com.example.wangfeng.test">
 
-    <uses-permission-sdk-23 android:name="android.permission.READ_SMS" />
+    <uses-permission-sdk-23 android:name="android.permission.READ_SMS"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/test"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-
-        >
-        <activity android:name=".MainActivity">
-
+        android:theme="@style/AppTheme">
+        <activity android:name=".Activity.MainActivity">
         </activity>
-        <activity android:name=".DesignActivity"
-            android:screenOrientation="portrait"
-            >
+        <activity
+            android:name=".DesignActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".Activity.MarginActivity"
+            android:label="@string/title_activity_margin"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".Activity.SnackbarActivity">
+        </activity>
+        <activity android:name=".Activity.CollActivity">
         </activity>
     </application>
 
