--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.wangfeng.test">
 
-    <uses-permission-sdk-23 android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.RequestActivity">
         </activity>
         <activity
-            android:name=".DesignActivity"
+            android:name=".Activity.DesignActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
@@ -28,7 +28,11 @@
         </activity>
         <activity android:name=".Activity.SnackbarActivity">
         </activity>
-        <activity android:name=".Activity.CollActivity">
+        <activity android:name=".Activity.CollActivity"
+            android:parentActivityName=".Activity.RequestActivity"
+            >
+        </activity>
+        <activity android:name=".Activity.FitstActivity">
         </activity>
     </application>
 
