--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".Activity.MarginActivity"
-            android:label="@string/title_activity_margin"
+            android:name=".Activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,11 +27,13 @@
         </activity>
         <activity android:name=".Activity.SnackbarActivity">
         </activity>
-        <activity android:name=".Activity.CollActivity"
-            android:parentActivityName=".Activity.RequestActivity"
-            >
+        <activity
+            android:name=".Activity.CollActivity"
+            android:parentActivityName=".Activity.RequestActivity">
         </activity>
         <activity android:name=".Activity.FitstActivity">
+        </activity>
+        <activity android:name=".Activity.BesselActivity">
         </activity>
     </application>
 
